--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="login_form_box">
                 <h1 data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500"><a href="#">
-                    <a href="#">
+                    <a href="https://minkyungkim529.github.io/rounded/">
                         <img src="images/login_logo.png" alt="login_logo">
                     </a>
                 </h1>
